[package]
name = "bazaars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = {version="0.7.9", features=["macros"]}
axum_typed_multipart = "0.14.0"
bigdecimal = {version = "0.4.6", features = ["serde"]}
chrono = {version = "0.4.38", features = ["serde"]}
cloud-storage = "0.11.1"
diesel = {version = "2.2.6", features = ["postgres", "chrono", "numeric", "serde_json", "r2d2"]}
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
tempfile = "3.14.0"
tokio = {version="1.42.0", features = ["rt-multi-thread"]}
uuid = { version = "1.11.0", features = ["v4"] }

[[bin]]
name = "bazaars"
path = "src/bin/main.rs"
doc = false

[lib]
doc = false

[build-dependencies]
dotenv = "0.15.0"
